tests/neg-inline-trait/disallow-inline-trait-inheritance.scala
inline trait Foo

inline trait Bar extends Foo // error